Me deshago por fin de los checkpoints

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /Introducci\303\263n/IntroduccionPython/.ipynb_checkpoints/*
 /Numpy/.ipynb_checkpoints/*
 /Matplotlib/.ipynb_checkpoints/*
+\.ipynb_*
